--- a/force-app/main/default/classes/ConcurrentSessionsPolicyCondition.cls
+++ b/force-app/main/default/classes/ConcurrentSessionsPolicyCondition.cls
@@ -2,6 +2,7 @@ global class ConcurrentSessionsPolicyCondition implements TxnSecurity.PolicyCond
 	// Change the MAX SESSIONS limit values as needed for your org.
 	//change 1
 	//change 2
+	//commite 3
 	public static Integer MAX_ADMIN_USER_SESSIONS = 1;
 	public static Integer MAX_USER_SESSIONS = 5;
 	public boolean evaluate(TxnSecurity.Event e) {
